--- a/bookshelf/peak_human/index.html
+++ b/bookshelf/peak_human/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html><head lang="en"><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html><head lang="en">
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"><title>Peak Human - by Johan Norberg - anuj says</title><link rel="icon" type="image/png" href=favicon.png /><meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Here are some of the notes I made while reading this fascinating book. Absolutely recommed it to someone who wishes to understand how golden ages begin, and how they end - and they all DO end eventually!
@@ -9,7 +9,7 @@ The discovery of new continents and sea routes shook European consciousness and 
 
 Renaissance Italy" />
 	<meta property="og:image" content=""/>
-	<meta property="og:url" content="http://localhost:1313/bookshelf/peak_human/">
+	<meta property="og:url" content="https://bearsonmars.github.io/bookshelf/peak_human/">
   <meta property="og:site_name" content="anuj says">
   <meta property="og:title" content="Peak Human - by Johan Norberg">
   <meta property="og:description" content="Here are some of the notes I made while reading this fascinating book. Absolutely recommed it to someone who wishes to understand how golden ages begin, and how they end - and they all DO end eventually!
@@ -33,8 +33,8 @@ The Dutch Republic The discovery of new continents and sea routes shook European
         <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 
 	
-	<link rel="stylesheet" type="text/css" media="screen" href="http://localhost:1313/css/main.7a5c05040394322612a2d98397e9932aa81d9d7acc70199463e79f8180c8e0c0.css" />
-		<link id="darkModeStyle" rel="stylesheet" type="text/css" href="http://localhost:1313/css/dark.478e7f2b9cf8d87be42edfd9fe1810beab1331847df94b1b430478b309f28282.css"  disabled /><script type="text/javascript"
+	<link rel="stylesheet" type="text/css" media="screen" href="https://bearsonmars.github.io/css/main.7a5c05040394322612a2d98397e9932aa81d9d7acc70199463e79f8180c8e0c0.css" />
+		<link id="darkModeStyle" rel="stylesheet" type="text/css" href="https://bearsonmars.github.io/css/dark.478e7f2b9cf8d87be42edfd9fe1810beab1331847df94b1b430478b309f28282.css"  disabled /><script type="text/javascript"
 		src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 		
 		<script type="text/x-mathjax-config">
@@ -66,7 +66,7 @@ The Dutch Republic The discovery of new continents and sea routes shook European
 <body>
         <div class="content"><header>
 	<div class="main">
-		<a href="http://localhost:1313/">anuj says</a>
+		<a href="https://bearsonmars.github.io/">anuj says</a>
 	</div>
 	<nav>
 		
@@ -91,7 +91,7 @@ The Dutch Republic The discovery of new continents and sea routes shook European
       <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
       <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
     </svg></button>
-		<script src="http://localhost:1313/js/themetoggle.js"></script>
+		<script src="https://bearsonmars.github.io/js/themetoggle.js"></script>
 		
 	</nav>
 </header>
@@ -157,6 +157,8 @@ The Dutch Republic The discovery of new continents and sea routes shook European
       href="https://github.com/athul/archie">Archie Theme</a> | Built with <a href="https://gohugo.io">Hugo</a>
   </div>
 </footer>
+
+
 
 </div>
     </body>
