added mailto, fixed some typos and image caption

--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@
 				
 				
 				<section class="list-item">
-					<h1 class="title"><a href="/posts/kindle_highlights/">Local Streamlit app for browsing Kindle highlights</a></h1>
+					<h1 class="title"><a href="/posts/kindle_highlights/">Streamlit webapp for browsing Kindle highlights</a></h1>
 					<time>Oct 30, 2025</time>
 					<br><div class="description">
 	
 	<p>I wanted to view the highlights and notes from the books I have read on my
-Kindle to be able to make some posts for this blog, but Amazon don&rsquo;t make it
+Kindle to be able to make some posts for this blog, but Amazon does not make it
 easy for some reason.</p>
 <p>The <strong>My Clippings.txt</strong> file, where a reader&rsquo;s notes, highlights and bookmarks
 are stored, is hard to read and annoying. Apparently an
-industry has come up to help users make sense of their own notes and
+industry has sprung up to help Kindle users make sense of their own notes and
 clippings-for a fee ofcourse.</p>&hellip;
 	
 </div>
@@ -143,6 +143,8 @@ clippings-for a fee ofcourse.</p>&hellip;
        <use href="/svg/feather-sprite.51cf5647cb1987f769b616558f2620fd9423d72058490231b391bf6aa3744b55.svg#linkedin" />
     </svg></a><a class="border"></a><a class="soc" href="https://open.spotify.com/user/ev8qw6uwl3kzp08gfx7djqwqy?si=fbfd1b9fc88d4fd7/" rel="me" title="Spotify"><svg class="feather">
        <use href="/svg/feather-sprite.51cf5647cb1987f769b616558f2620fd9423d72058490231b391bf6aa3744b55.svg#music" />
+    </svg></a><a class="border"></a><a class="soc" href="mailto:anujkumar@outlook.com" rel="me" title="Email"><svg class="feather">
+       <use href="/svg/feather-sprite.51cf5647cb1987f769b616558f2620fd9423d72058490231b391bf6aa3744b55.svg#mail" />
     </svg></a><a class="border"></a></div>
   <div class="footer-info">
     2025  © Anuj Kumar |  <a
