--- a/about/index.html
+++ b/about/index.html
@@ -129,6 +129,8 @@ At the core of my being is the desire to understand, manipulate, model and commu
        <use href="/svg/feather-sprite.51cf5647cb1987f769b616558f2620fd9423d72058490231b391bf6aa3744b55.svg#linkedin" />
     </svg></a><a class="border"></a><a class="soc" href="https://open.spotify.com/user/ev8qw6uwl3kzp08gfx7djqwqy?si=fbfd1b9fc88d4fd7/" rel="me" title="Spotify"><svg class="feather">
        <use href="/svg/feather-sprite.51cf5647cb1987f769b616558f2620fd9423d72058490231b391bf6aa3744b55.svg#music" />
+    </svg></a><a class="border"></a><a class="soc" href="mailto:anujkumar@outlook.com" rel="me" title="Email"><svg class="feather">
+       <use href="/svg/feather-sprite.51cf5647cb1987f769b616558f2620fd9423d72058490231b391bf6aa3744b55.svg#mail" />
     </svg></a><a class="border"></a></div>
   <div class="footer-info">
     2025  © Anuj Kumar |  <a
