--- a/about/index.html
+++ b/about/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html><head lang="en"><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html><head lang="en">
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"><title>Who am I? - anuj says</title><link rel="icon" type="image/png" href=favicon.png /><meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Hello, I am called Anuj Kumar and thank you for showing an interest in learning about me.
 I have been a financial derivatives trader, a data scientist, a chef, a spiritual guide, a painter, a writer - and I continue to be all of them. I enjoy testing the limits of what I am capable of doing professionally. There are infinite possibilities to explore.
 At the core of my being is the desire to understand, manipulate, model and communicate the story behind words and numbers which govern the world and ideas around us. I am equally adept and comfortable with both of them. I am thrilled about the opportunities in this brave new AI world to usher in a preternatural era of prosperity and growth for all." />
 	<meta property="og:image" content=""/>
-	<meta property="og:url" content="http://localhost:1313/about/">
+	<meta property="og:url" content="https://bearsonmars.github.io/about/">
   <meta property="og:site_name" content="anuj says">
   <meta property="og:title" content="Who am I?">
   <meta property="og:description" content="Hello, I am called Anuj Kumar and thank you for showing an interest in learning about me.
@@ -27,8 +27,8 @@ At the core of my being is the desire to understand, manipulate, model and commu
         <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 
 	
-	<link rel="stylesheet" type="text/css" media="screen" href="http://localhost:1313/css/main.7a5c05040394322612a2d98397e9932aa81d9d7acc70199463e79f8180c8e0c0.css" />
-		<link id="darkModeStyle" rel="stylesheet" type="text/css" href="http://localhost:1313/css/dark.478e7f2b9cf8d87be42edfd9fe1810beab1331847df94b1b430478b309f28282.css" media="(prefers-color-scheme: dark)"  /><script type="text/javascript"
+	<link rel="stylesheet" type="text/css" media="screen" href="https://bearsonmars.github.io/css/main.7a5c05040394322612a2d98397e9932aa81d9d7acc70199463e79f8180c8e0c0.css" />
+		<link id="darkModeStyle" rel="stylesheet" type="text/css" href="https://bearsonmars.github.io/css/dark.478e7f2b9cf8d87be42edfd9fe1810beab1331847df94b1b430478b309f28282.css" media="(prefers-color-scheme: dark)"  /><script type="text/javascript"
 		src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 		
 		<script type="text/x-mathjax-config">
@@ -60,7 +60,7 @@ At the core of my being is the desire to understand, manipulate, model and commu
 <body>
         <div class="content"><header>
 	<div class="main">
-		<a href="http://localhost:1313/">anuj says</a>
+		<a href="https://bearsonmars.github.io/">anuj says</a>
 	</div>
 	<nav>
 		
@@ -125,6 +125,8 @@ At the core of my being is the desire to understand, manipulate, model and commu
       href="https://github.com/athul/archie">Archie Theme</a> | Built with <a href="https://gohugo.io">Hugo</a>
   </div>
 </footer>
+
+
 
 </div>
     </body>
