--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<head lang="en"><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+	<head lang="en">
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"><title>anuj says | Home </title><link rel="icon" type="image/png" href=favicon.png /><meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta property="og:image" content=""/>
-	<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/index.xml" title="anuj says" />
-	<meta property="og:url" content="http://localhost:1313/">
+	<link rel="alternate" type="application/rss+xml" href="https://bearsonmars.github.io/index.xml" title="anuj says" />
+	<meta property="og:url" content="https://bearsonmars.github.io/">
   <meta property="og:site_name" content="anuj says">
   <meta property="og:title" content="anuj says">
   <meta property="og:locale" content="en_gb">
@@ -19,8 +19,8 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 
 	
-	<link rel="stylesheet" type="text/css" media="screen" href="http://localhost:1313/css/main.7a5c05040394322612a2d98397e9932aa81d9d7acc70199463e79f8180c8e0c0.css" />
-		<link id="darkModeStyle" rel="stylesheet" type="text/css" href="http://localhost:1313/css/dark.478e7f2b9cf8d87be42edfd9fe1810beab1331847df94b1b430478b309f28282.css" media="(prefers-color-scheme: dark)"  /><script type="text/javascript"
+	<link rel="stylesheet" type="text/css" media="screen" href="https://bearsonmars.github.io/css/main.7a5c05040394322612a2d98397e9932aa81d9d7acc70199463e79f8180c8e0c0.css" />
+		<link id="darkModeStyle" rel="stylesheet" type="text/css" href="https://bearsonmars.github.io/css/dark.478e7f2b9cf8d87be42edfd9fe1810beab1331847df94b1b430478b309f28282.css" media="(prefers-color-scheme: dark)"  /><script type="text/javascript"
 		src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 		
 		<script type="text/x-mathjax-config">
@@ -54,7 +54,7 @@
 		<div class="content">
 			<header>
 	<div class="main">
-		<a href="http://localhost:1313/">anuj says</a>
+		<a href="https://bearsonmars.github.io/">anuj says</a>
 	</div>
 	<nav>
 		
@@ -159,6 +159,8 @@ clippings-for a fee ofcourse.</p>&hellip;
       href="https://github.com/athul/archie">Archie Theme</a> | Built with <a href="https://gohugo.io">Hugo</a>
   </div>
 </footer>
+
+
 
 
 		</div>
